# skyborn-cdo

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
patches/: windows-compat.patch
scripts/: build_cdo.sh  build_cdo_windows.sh  build_deps_linux.sh  build_deps_macos.sh  build_deps_windows.sh  build_local_windows.sh  patch_cdo_windows.py
src/skyborn_cdo/: __init__.py  _cdo_binary.py  _cdo_platform.c  _cli.py  _runner.py  cdo.py
tests/: ci_wheel_test.py  test_cdo.py
